runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__ReceiptDbStats-75220100-75220101.s3.io_trace.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
      process_transaction tx_hash=AA7U5AQwKV5zCMEqN1317cqwBQkAMRiWtAtoRSNjXEjT block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   32 State  

      process_transaction tx_hash=AKtUBGwV1zxbG3dRjCQD9WJ12Fzo9YgQ1ow2nZCd2m6t block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   21 State  

      process_transaction tx_hash=uSKvjryKgJQrWKg5EFSvEpnDUPRtRSbPrX42i84ekV3 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   37 State  

      process_receipt receiver=verrelkeung.unc receipt_id=cesi14ugy8KbNKu5SqL5SYY8MUFRWC39qzKYP9xiJL7 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR

      process_receipt receiver=token.sweat receipt_id=4tSv2K8ohafiXnCAKprrWinzRFuaMwQzM83dkVx99q7r block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   70 State  

      process_receipt receiver=tge-lockup.sweat receipt_id=7UeSKKYxqRLsSwnW5xJm116QTJEWJJa7YqR1JmNWZE3L block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR

      process_receipt receiver=npo-aurora.unc receipt_id=7HpTajwsXdnmX2EEzWq9PXktDJLGJGwqWhL4gcQ3QVQ3 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   16 State  

      process_receipt receiver=tge-lockup.sweat receipt_id=CHPvzniPWKMWCiZ3c6ydqN6QgsEBpS3pNgP7HH48iQLK block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   20 State  

      process_receipt receiver=sweat_welcome.unc receipt_id=H8GTFPKBkuUjvs8NfzcPNZuapFiMbGUMvscNZhnjUsPv block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   36 State  

      process_receipt receiver=token.sweat receipt_id=4rYKmJdE5pAHCDb9qVYRjTruvE58vRPRH9A7sGroBa3b block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   19 State  

      process_receipt receiver=token.sweat receipt_id=ohgxoczB4YhnAsUDpFVDpnMGP5iXuZbftgNe86KZ5XN block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   13 State  

      process_receipt receiver=token.sweat receipt_id=9iNcdK3djEA1mqNP4gaQM8jcaEvBtqas31S79cAWH4TY block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   8 State  

      process_receipt receiver=token.sweat receipt_id=22c3R5Xe82GCre4Mxa33Se7M4Rhp77RMf4ZwRjS55Ai7 block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   8 State  

      process_receipt receiver=ya_gul.unc receipt_id=B2XmBAZhY3gYwktoRiP96KBip7Jd5iQNHbRXKLW2348W block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   16 State  

      process_receipt receiver=nex1234.unc receipt_id=DbRHWcLYjARUjjUZj3ERR5SGcBE7nLrXTe1dKmuLWivu block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   14 State  

      process_receipt receiver=xtoken.ref-finance.unc receipt_id=6RiUAxqBmiBo4XnEURb87D5twzmrZjELre4cJkEzdFuu block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   34 State  

      process_receipt receiver=tge-lockup.sweat receipt_id=EYwsRh17pfzg1n6uWEduBbrvbWmf2hnt2g8HPeABZLHR block=FhsQS1zgTLpZjYitRKevStmzJfUgweUTjQA1rUeNW6QR
        GET   25 State  

      process_transaction tx_hash=Fdaq5LbQw49MfMp1BHMfXCkDVA3RW9ZnYqTbTSrdz2VD block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   44 State  

      process_transaction tx_hash=D8U1btrcfRbbf8wV1uWLmHKY1hDHBYUySwwE7hmPWjAP block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   33 State  

      process_transaction tx_hash=FjwDNPxNxgpipRX3s48kRNUGfaPwgxG64N7KRQ7YULx2 block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   24 State  

      process_transaction tx_hash=HN32RHYR9J1up2MguxxCpcyhnFwbxttKNTscT4n748SR block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   20 State  

      process_transaction tx_hash=A76PNL2oTtuUtpe51dpCrcCU2NShF2vkB6ZTLHoXEnKx block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9

      process_receipt receiver=token.sweat receipt_id=8s88Y7hyAXrmZngJGpRBsvsbqYzAQiJbqdwSMESeLmr5 block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   52 State  

      process_receipt receiver=seensayer.unc receipt_id=J6m2SVXWwC3oR2g2QDbbqZf7GCTYx8tQETZuFCi1QDBU block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   24 State  

      process_receipt receiver=tge-lockup.sweat receipt_id=AZawzkDrLTMrbxZTBWwgkYTY5AEcEBJQYsVrRckDayf4 block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   27 State  

      process_receipt receiver=token.sweat receipt_id=454QLeWg3Yy4HQLcowLtvQGJfwzw2reUREx1sLtv1gga block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   16 State  

      process_receipt receiver=tge-lockup.sweat receipt_id=Jf6Hh3cgANXPYkd536rGMFbWkXzkA1CBNFNJhwn3ksL block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   6 State  

      process_receipt receiver=token.v2.ref-finance.unc receipt_id=8vJXghN3eeQr2HLsSMEUmVb85sZymMSKseYNfKmK328o block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   29 State  

      process_receipt receiver=xtoken.ref-finance.unc receipt_id=9r96hCrbYcEzqaTRrA6mZHv26KJqrihjuomU6Hf6vfTX block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9

      process_receipt receiver=token.sweat receipt_id=7d1QXW1is9bzovZSA1XJK1AWTrPJPixNVReuCihPBQFh block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9
        GET   15 State  

      process_receipt receiver=tge-lockup.sweat receipt_id=EvN6kHZCYkBr4E8V8jm5R97Nf7paX6xhbtz57YZbHsn block=2zB2oBqRj8dFECSaBeGP6hGGDs7KowYBVwcVfq8Ukjf9


