runtime/runtime-params-estimator/src/snapshots/runtime_params_estimator__replay__tests__account_filter_ReceiptDbStats.snap
---
source: runtime/runtime-params-estimator/src/replay.rs
expression: output
---
            process_receipt receiver=alice.unc receipt_id=id0
              GET   2 State  

            process_receipt receiver=alice.unc receipt_id=id2
              GET   2 State  

            process_receipt receiver=alice.unc receipt_id=id3


